gcc/testsuite/gm2/iso/fail/testarrayunbounded4.mod
MODULE testarrayunbounded4 ;


PROCEDURE foo (a: ARRAY OF CHAR) ;
BEGIN

END foo ;


VAR
   b: CHAR ;
BEGIN
   foo (b)
END testarrayunbounded4.
